k8s-ex/Ingress/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx 
          image: avian19/choco-shop-home
          ports:
            - containerPort: 80
