k8s-ex/Ingress/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
        - name: nginx2
          image: avian19/choco-shop-menu
          ports:
            - containerPort: 80
