k8s-ex/Ingress/deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
        - name: nginx3
          image: avian19/choco-shop-reviews
          ports:
            - containerPort: 80
