k8s-ex/Ingress/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service3
spec:
  selector:
    app: nginx3
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
